fixed vertical overflow of map

--- a/client/src/components/map/Map.css
+++ b/client/src/components/map/Map.css
@@ -23,6 +23,7 @@
   flex-direction: row;
   justify-content: left;
   align-items: center;
+  overflow-y: clip;
 }
 .map-container {
   height: 100%;
